// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AVGDetail > No result > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/avg"
              >
                AVG persoonsgegevens
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/avg/verzoek/abc"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  AVG verzoek
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          AVG verzoek
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="ams-alert ams-alert--error"
      >
        <div
          class="ams-alert__severity-indicator"
        >
          <span
            class="ams-icon ams-icon--inverse ams-icon--heading-4"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m22.879 12-5.44 9.422-10.877-.001L1.122 12 6.56 2.58h10.878zM12 10.586 8.856 7.442 7.442 8.856 10.586 12l-3.144 3.145 1.414 1.414L12 13.414l3.145 3.145 1.414-1.415L13.414 12l3.145-3.145-1.415-1.413z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="ams-alert__content"
        >
          <div
            class="ams-row ams-row--align-between ams-row--align-vertical-start"
          >
            <h4
              class="ams-heading ams-heading--4"
            >
              Foutmelding
            </h4>
          </div>
          <p
            class="ams-paragraph"
          >
            We kunnen op dit moment geen gegevens tonen.
          </p>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AVGDetail > With result > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/avg"
              >
                AVG persoonsgegevens
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/avg/verzoek/223"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  AVG verzoek
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          AVG verzoek
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_240c86"
      >
        <dt
          class="_Datalist__title_240c86"
        >
          Nummer
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          223
        </dd>
        <dt
          class="_Datalist__title_240c86"
        >
          Type verzoek
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Verwijderen gegevens
        </dd>
        <dt
          class="_Datalist__title_240c86"
        >
          Onderwerp(en)
        </dt>
        <dd
          class="_Datalist__description_240c86"
        >
          Vergunningen, Enzo
        </dd>
      </dl>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="_Steps_5b0b8a"
      >
        <h3
          class="ams-heading ams-heading--2 ams-mb-m"
        >
          Status
        </h3>
        <ol
          class="ams-ordered-list ams-ordered-list--no-markers _StepsList_5b0b8a"
        >
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              Ontvangen
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2023-03-18T00:00:00.000Z"
            >
              18 maart 2023
            </time>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--checked_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Status Afgerond"
                class="_StepStatusIndication_5b0b8a"
              >
                <span
                  aria-label="Status Afgerond"
                  class="ams-icon ams-icon--heading-6 _StatusIndicationCheckmark_5b0b8a"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.216 27.016 0 14.168l2.91-2.77 9.346 9.837L29.129 4 32 6.8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              In behandeling
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2023-05-30T00:00:00.000Z"
            >
              30 mei 2023
            </time>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a _Step--active_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Huidige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Extra informatie nodig
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime="2023-06-03T00:00:00.000Z"
            >
              03 juni 2023
            </time>
            <div>
              Wij hebben meer informatie nodig om uw verzoek in behandeling te nemen. U krijgt een brief waarin staat welke informatie wij nodig hebben.
            </div>
          </li>
          <li
            class="ams-ordered-list__item _Step_5b0b8a"
          >
            <h4
              class="ams-heading ams-heading--4 _StepStatus_5b0b8a"
            >
              <span
                aria-label="Toekomstige status"
                class="_StepStatusIndication_5b0b8a"
              />
              Afgehandeld
            </h4>
            <time
              class="_StepStatusDate_5b0b8a"
              datetime=""
            />
          </li>
        </ol>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
